[package]
name = "jabberwock"
description = "A simple yet modular static site generator."
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
glob = "0.3.0"
hatter = "0.1.4"
markdown = { version = "0.3.0", optional = true }
toml = { version = "0.5.9", optional = true }

[features]
default = ["copy", "markdown", "templates", "toml", "transpile"]
copy = []
markdown = ["dep:markdown"]
templates = []
toml = ["dep:toml"]
transpile = []